--- a/public/css/app.css
+++ b/public/css/app.css
@@ -542,393 +542,378 @@ video {
   }
 }
 .fixed {
-  position: fixed;
+  position: fixed !important;
 }
 .relative {
-  position: relative;
+  position: relative !important;
 }
 .top-0 {
-  top: 0px;
+  top: 0px !important;
 }
 .right-0 {
-  right: 0px;
+  right: 0px !important;
 }
 .m-0 {
-  margin: 0px;
+  margin: 0px !important;
 }
 .mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 .ml-1 {
-  margin-left: 0.25rem;
+  margin-left: 0.25rem !important;
 }
 .mt-2 {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem !important;
 }
 .mr-2 {
-  margin-right: 0.5rem;
+  margin-right: 0.5rem !important;
 }
 .ml-2 {
-  margin-left: 0.5rem;
+  margin-left: 0.5rem !important;
 }
 .mt-4 {
-  margin-top: 1rem;
+  margin-top: 1rem !important;
 }
 .ml-4 {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 .mt-8 {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 .ml-12 {
-  margin-left: 3rem;
+  margin-left: 3rem !important;
 }
 .-mt-px {
-  margin-top: -1px;
+  margin-top: -1px !important;
 }
 .mb-3 {
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.75rem !important;
 }
 .mb-0 {
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
 }
 .flex {
-  display: flex;
+  display: flex !important;
 }
 .grid {
-  display: grid;
+  display: grid !important;
 }
 .hidden {
-  display: none;
+  display: none !important;
 }
 .h-5 {
-  height: 1.25rem;
+  height: 1.25rem !important;
 }
 .h-8 {
-  height: 2rem;
+  height: 2rem !important;
 }
 .h-16 {
-  height: 4rem;
+  height: 4rem !important;
 }
 .h-screen {
-  height: 100vh;
+  height: 100vh !important;
 }
 .h-full {
-  height: 100%;
+  height: 100% !important;
 }
-.h-12 {
-  height: 3rem;
+.h-screen {
+  height: 100vh !important;
+}
+.h-full {
+  height: 100% !important;
+}
+.h-screen {
+  height: 100vh !important;
+}
+.h-full {
+  height: 100% !important;
 }
 .min-h-screen {
-  min-height: 100vh;
+  min-height: 100vh !important;
 }
 .w-5 {
-  width: 1.25rem;
+  width: 1.25rem !important;
 }
 .w-8 {
-  width: 2rem;
+  width: 2rem !important;
 }
 .w-auto {
-  width: auto;
-}
-.w-screen {
-  width: 100vw;
-}
-.w-96 {
-  width: 24rem;
+  width: auto !important;
 }
 .w-full {
-  width: 100%;
-}
-.w-64 {
-  width: 16rem;
+  width: 100% !important;
 }
 .max-w-6xl {
-  max-width: 72rem;
+  max-width: 72rem !important;
 }
 .flex-none {
-  flex: none;
+  flex: none !important;
 }
 .grow {
-  flex-grow: 1;
-}
-.cursor-pointer {
-  cursor: pointer;
+  flex-grow: 1 !important;
 }
 .grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
 }
 .flex-col {
-  flex-direction: column;
+  flex-direction: column !important;
 }
 .items-center {
-  align-items: center;
+  align-items: center !important;
 }
 .justify-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 .gap-y-5 {
-  row-gap: 1.25rem;
+  row-gap: 1.25rem !important;
 }
 .self-center {
-  align-self: center;
+  align-self: center !important;
 }
 .overflow-hidden {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 .rounded-lg {
-  border-radius: 0.5rem;
+  border-radius: 0.5rem !important;
 }
-.rounded-full {
-  border-radius: 9999px;
-}
-.rounded-r-lg {
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+.rounded {
+  border-radius: 0.25rem !important;
 }
 .border-t {
-  border-top-width: 1px;
+  border-top-width: 1px !important;
 }
 .border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
 }
 .bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 .bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-.bg-slate-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-.bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
 }
 .bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
+}
+.bg-white {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 .p-6 {
-  padding: 1.5rem;
+  padding: 1.5rem !important;
 }
 .p-0 {
-  padding: 0px;
+  padding: 0px !important;
 }
-.p-5 {
-  padding: 1.25rem;
+.p-10 {
+  padding: 2.5rem !important;
 }
 .py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 .px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+.px-5 {
+  padding-left: 1.25rem !important;
+  padding-right: 1.25rem !important;
+}
+.px-20 {
+  padding-left: 5rem !important;
+  padding-right: 5rem !important;
+}
+.px-5 {
+  padding-left: 1.25rem !important;
+  padding-right: 1.25rem !important;
+}
+.px-10 {
+  padding-left: 2.5rem !important;
+  padding-right: 2.5rem !important;
+}
+.px-5 {
+  padding-left: 1.25rem !important;
+  padding-right: 1.25rem !important;
+}
+.px-10 {
+  padding-left: 2.5rem !important;
+  padding-right: 2.5rem !important;
 }
 .pt-8 {
-  padding-top: 2rem;
+  padding-top: 2rem !important;
 }
 .text-center {
-  text-align: center;
+  text-align: center !important;
 }
 .align-baseline {
-  vertical-align: baseline;
+  vertical-align: baseline !important;
 }
 .text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
 }
 .text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
 }
 .font-semibold {
-  font-weight: 600;
+  font-weight: 600 !important;
 }
 .leading-7 {
-  line-height: 1.75rem;
+  line-height: 1.75rem !important;
 }
 .text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(229 231 235 / var(--tw-text-opacity)) !important;
 }
 .text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(209 213 219 / var(--tw-text-opacity)) !important;
 }
 .text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(156 163 175 / var(--tw-text-opacity)) !important;
 }
 .text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
 }
 .text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
 }
 .text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
 }
 .text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  --tw-text-opacity: 1 !important;
+  color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
 }
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 .underline {
-  text-decoration-line: underline;
+  text-decoration-line: underline !important;
 }
 .antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
 }
 .shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1) !important;
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 .shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.hover\:bg-gray-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-.hover\:bg-red-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05) !important;
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity));
+    --tw-border-opacity: 1 !important;
+    border-color: rgb(55 65 81 / var(--tw-border-opacity)) !important;
   }
 
   .dark\:bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity)) !important;
   }
 
   .dark\:bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity)) !important;
   }
 
   .dark\:text-gray-500 {
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity));
+    --tw-text-opacity: 1 !important;
+    color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
   }
 
   .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
+    --tw-text-opacity: 1 !important;
+    color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
   }
 
   .dark\:text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
+    --tw-text-opacity: 1 !important;
+    color: rgb(156 163 175 / var(--tw-text-opacity)) !important;
   }
 }
 @media (min-width: 640px) {
 
   .sm\:ml-0 {
-    margin-left: 0px;
+    margin-left: 0px !important;
   }
 
   .sm\:block {
-    display: block;
+    display: block !important;
   }
 
   .sm\:h-20 {
-    height: 5rem;
+    height: 5rem !important;
   }
 
   .sm\:items-center {
-    align-items: center;
+    align-items: center !important;
   }
 
   .sm\:justify-start {
-    justify-content: flex-start;
+    justify-content: flex-start !important;
   }
 
   .sm\:justify-between {
-    justify-content: space-between;
+    justify-content: space-between !important;
   }
 
   .sm\:rounded-lg {
-    border-radius: 0.5rem;
+    border-radius: 0.5rem !important;
   }
 
   .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
   }
 
   .sm\:pt-0 {
-    padding-top: 0px;
+    padding-top: 0px !important;
   }
 
   .sm\:text-left {
-    text-align: left;
+    text-align: left !important;
   }
 
   .sm\:text-right {
-    text-align: right;
+    text-align: right !important;
   }
 }
 @media (min-width: 768px) {
 
   .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
 
   .md\:border-t-0 {
-    border-top-width: 0px;
+    border-top-width: 0px !important;
   }
 
   .md\:border-l {
-    border-left-width: 1px;
+    border-left-width: 1px !important;
   }
 }
 @media (min-width: 1024px) {
 
   .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
   }
 }
 
